Use java-devel package for runtime image